--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-10-23 21:18+0000\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -50,7 +50,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
 #: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
-#: sections/credits.tex:34 sections/random_scenario.tex:314
+#: sections/credits.tex:34 sections/random_scenario.tex:306
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -66,10 +66,10 @@ msgstr ""
 #: clash/the_fractured_kingdoms.tex:26
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
+"\\textbf{Town Buildings:} \\svg{bronze} Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Městské Budovy:} \\bronze\\ Obydlí\n"
+"\\textbf{Městské Budovy:} \\svg{bronze} Obydlí\n"
 "\n"
 
 #. type: multicols*
@@ -164,15 +164,15 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Few \\bronze\\ Units with the \\textit{highest} Recruitment cost\n"
-"  \\item A Pack of \\bronze\\ Units with the \\textit{lowest} Recruitment cost\n"
+"  \\item A Few \\svg{bronze} Units with the \\textit{highest} Recruitment cost\n"
+"  \\item A Pack of \\svg{bronze} Units with the \\textit{lowest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Hrstka \\bronze\\ Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
-"  \\item Tlupu \\bronze\\ Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item Hrstka \\svg{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Tlupu \\svg{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -358,47 +358,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:118
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item When a player Visits an Obelisk, they \\textit{must} resolve one of the following effects:\n"
-#| "  \\begin{enumerate}[leftmargin=15pt]\n"
-#| "    \\item \\textbf{[Cleanse]} The player receives one of the following boons, depending on how many Obelisks they have Visited:\n"
-#| "    \\begin{enumerate}\n"
-#| "      \\item \\textbf{[1st Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have one, gain 6 \\svg{gold} instead. Then, choose one enemy player to discard 1 random Card from their hand.\n"
-#| "      \\item \\textbf{[2nd Obelisk]} Increase your \\svg{gold}, \\svg{building_materials}, or \\svg{valuables} income by 1 step.\n"
-#| "      \\item \\textbf{[3rd Obelisk]} Roll 2 \\svg{treasure} and choose 1 to resolve; then, gain \\svg{morale_positive} and \\svg{movement}.\n"
-#| "      \\item \\textbf{[4th Obelisk]} Remove up to 4 Cards from your hand, except Statistic Cards; then, search each corresponding Deck for a Card of your choice and put it in your hand.\n"
-#| "    \\end{enumerate}\n"
-#| "    \\item \\textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:\n"
-#| "    \\begin{enumerate}\n"
-#| "      \\item *\\bronze\\: Gain 6 \\svg{gold}, 3 \\svg{building_materials}, and 1 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (4)} the Minor Artifact Deck.\n"
-#| "      \\item *\\silver\\: Gain 12 \\svg{gold}, 6 \\svg{building_materials}, and 2 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (3)} the Major Artifact Deck.\n"
-#| "      \\item *\\golden\\: Gain 18 \\svg{gold}, 9 \\svg{building_materials}, and 3 \\svg{valuables}. Additionally, \\textbf{Search (2)} the Relic Card Deck. Finally, if the Unit Card was on the Pack side, \\textbf{Search (2)} the \\azure\\ Unit Deck; you may Recruit one of these Units for half the cost (rounded down).\n"
-#| "    \\end{enumerate}\n"
-#| "  \\end{enumerate}\n"
-#| "  \\item A player that chooses \\textbf{Sacrifice} at an Obelisk gains the title of ``\\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction Cube on their Hero portrait to mark this effect. A \\textcolor{darkcandyapplered}{Blood Knight} may never choose the \\textbf{Cleanse} option when Visiting an Obelisk.\n"
-#| "  \\item A player that chooses \\textbf{Cleanse} at an Obelisk gains the title of ``\\textcolor{cobalt}{Grail Knight}.'' Place a blue Faction Cube on their Hero portrait to mark this effect. A \\textcolor{cobalt}{Grail Knight} may never choose the \\textbf{Sacrifice} option when Visiting an Obelisk.\n"
-#| "  \\item When a player chooses \\textbf{Sacrifice} at an Obelisk, place a number of Faction Cubes on the sacrificed Unit Card and on the Obelisk Field equivalent to the number of times the player has chosen the \\textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 Faction Cubes on the Unit Card and 2 Faction Cubes on the Obelisk Field.\n"
-#| "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit Few instead.\n"
-#| "  \\item If a Unit Recruited at an Obelisk is defeated, remove it.\n"
-#| "  \\item A player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability Card. If a player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability Card, they may show it to the other players, then discard it and draw a new Ability Card in its stead.\n"
-#| "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability Card to Recruit Neutral \\azure\\ Units.\n"
-#| "  \\item Whenever an Astrologers Proclaim or Event Card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event Card.\n"
-#| "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their Faction Town.\n"
-#| "  \\item Ignore Combat encounters on the Field with the Grail.\n"
-#| "  \\item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.\n"
-#| "  \\item To obtain the Grail Token, a player’s Hero must spend 2 MPs on the Field with the Grail.\n"
-#| "  \\item If a player does not possess the title of ``\\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit Card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.\n"
-#| "  \\item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.\n"
-#| "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
-#| "  \\item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.\n"
-#| "  \\item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.\n"
-#| "  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units and assign it to enemy Units.''\n"
-#| "  \\item A Hero with the Grail Token who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction Cube on the Grail Token to mark this effect.\n"
-#| "  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units.''\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they \\textit{must} resolve one of the following effects:\n"
@@ -412,9 +372,9 @@ msgid ""
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:\n"
 "    \\begin{enumerate}\n"
-"      \\item *\\bronze\\: Gain 6 \\svg{gold}, 3 \\svg{building_materials}, and 1 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (4)} the Minor Artifact Deck.\n"
-"      \\item *\\silver\\: Gain 12 \\svg{gold}, 6 \\svg{building_materials}, and 2 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (3)} the Major Artifact Deck.\n"
-"      \\item *\\golden\\: Gain 18 \\svg{gold}, 9 \\svg{building_materials}, and 3 \\svg{valuables}. Additionally, \\textbf{Search (2)} the Relic Card Deck. Finally, if the Unit Card was on the Pack side, \\textbf{Search (2)} the \\azure\\ Unit Deck; you may Recruit one of these Units for half the cost (rounded down).\n"
+"      \\item *\\svg{bronze}: Gain 6 \\svg{gold}, 3 \\svg{building_materials}, and 1 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (4)} the Minor Artifact Deck.\n"
+"      \\item *\\svg{silver}: Gain 12 \\svg{gold}, 6 \\svg{building_materials}, and 2 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (3)} the Major Artifact Deck.\n"
+"      \\item *\\svg{golden}: Gain 18 \\svg{gold}, 9 \\svg{building_materials}, and 3 \\svg{valuables}. Additionally, \\textbf{Search (2)} the Relic Card Deck. Finally, if the Unit Card was on the Pack side, \\textbf{Search (2)} the \\svg{azure} Unit Deck; you may Recruit one of these Units for half the cost (rounded down).\n"
 "    \\end{enumerate}\n"
 "  \\end{enumerate}\n"
 "  \\item A player that chooses \\textbf{Sacrifice} at an Obelisk gains the title of ``\\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction Cube on their Hero portrait to mark this effect. A \\textcolor{darkcandyapplered}{Blood Knight} may never choose the \\textbf{Cleanse} option when Visiting an Obelisk.\n"
@@ -423,7 +383,7 @@ msgid ""
 "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit Few instead.\n"
 "  \\item If a Unit Recruited at an Obelisk is defeated, remove it.\n"
 "  \\item A player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability Card. If a player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability Card, they may show it to the other players, then discard it and draw a new Ability Card in its stead.\n"
-"  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability Card to Recruit Neutral \\azure\\ Units.\n"
+"  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability Card to Recruit Neutral \\svg{azure} Units.\n"
 "  \\item Whenever an Astrologers Proclaim or Event Card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event Card.\n"
 "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their Faction Town.\n"
 "  \\item Ignore Combat encounters on the Field with the Grail.\n"
@@ -453,9 +413,9 @@ msgstr ""
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Oběť]} Odstraňte Kartu Jednotky své Frakce z vašeho Balíčku Jednotek výměnou za:\n"
 "    \\begin{enumerate}\n"
-"      \\item *\\bronze\\: Získejte 6 \\svg{gold}, 3 \\svg{building_materials}, a 1 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Tlupy, \\textbf{Hledejte (4)} v Balíčku Menších Artefaktů.\n"
-"      \\item *\\silver\\: Získejte 12 \\svg{gold}, 6 \\svg{building_materials}, a 2 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Tlupy, \\textbf{Hledejte (3)} v Balíčku Větších Artefaktů.\n"
-"      \\item *\\golden\\: Získejte 18 \\svg{gold}, 9 \\svg{building_materials}, a 3 \\svg{valuables}. Navíc, \\textbf{Hledejte (2)} v Balíčku karet Relikvií. A nakonec, pokud byla Karta Jednotky na straně Tlupy, \\textbf{Hledejte (2)} v Balíčku \\azure\\ Jednotek; můžete Naverbovat jednu z těchto Jednotek za poloviční cenu (zaokrouhleno dolů).\n"
+"      \\item *\\svg{bronze}: Získejte 6 \\svg{gold}, 3 \\svg{building_materials}, a 1 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Tlupy, \\textbf{Hledejte (4)} v Balíčku Menších Artefaktů.\n"
+"      \\item *\\svg{silver}: Získejte 12 \\svg{gold}, 6 \\svg{building_materials}, a 2 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Tlupy, \\textbf{Hledejte (3)} v Balíčku Větších Artefaktů.\n"
+"      \\item *\\svg{golden}: Získejte 18 \\svg{gold}, 9 \\svg{building_materials}, a 3 \\svg{valuables}. Navíc, \\textbf{Hledejte (2)} v Balíčku karet Relikvií. A nakonec, pokud byla Karta Jednotky na straně Tlupy, \\textbf{Hledejte (2)} v Balíčku \\svg{azure} Jednotek; můžete Naverbovat jednu z těchto Jednotek za poloviční cenu (zaokrouhleno dolů).\n"
 "    \\end{enumerate}\n"
 "  \\end{enumerate}\n"
 "  \\item Hráč, který si zvolí \\textbf{Oběť} u Obelisku, získá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}. Umístěte červenou Kostičku Frakce na portrét jejich Hrdiny, aby byl tento efekt označen. \\textcolor{darkcandyapplered}{Krvavý Rytíř} nikdy nesmí zvolit možnost \\textbf{Očištění} při Navštěvování Obelisku.\n"
@@ -464,7 +424,7 @@ msgstr ""
 "  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, může po Navštívení Obelisku naverbovat nepřátelskou Jednotku obětovanou u tohoto Obelisku za poloviční cenu (zaokrouhleno dolů); pokud byla obětována Tlupa, hráč může místo toho zvolit naverbovat Hrstku.\n"
 "  \\item Pokud je Jednotka naverbovaná u Obelisku poražena, Odstraňte ji.\n"
 "  \\item Hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, nemůže použít Kartu Dovednosti Diplomacie. Pokud hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, vytáhne Kartu Dovednosti Diplomacie, může ji ukázat ostatním hráčům, poté ji odhodit a místo ní si vzít novou Kartu Dovednosti.\n"
-"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít Kartu Dovednosti Diplomacie k Naverbování Neutrálních \\azure\\ Jednotek.\n"
+"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít Kartu Dovednosti Diplomacie k Naverbování Neutrálních \\svg{azure} Jednotek.\n"
 "  \\item Kdykoli je vytažena Karta Prohlášení Astrologů nebo Karta Události, která umožňuje Naverbování Neutrálních Jednotek, ignorujte ji a vytáhněte Kartu novou.\n"
 "  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své Frakce.\n"
 "  \\item Ignorujte střety v Souboji na Poli s Grálem.\n"
