--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-05-06 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -113,7 +113,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -129,7 +129,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:308
+#: sections/random_scenario.tex:298
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -154,15 +154,15 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\bronze\\ Units of your choice\n"
-"  \\item A Few \\bronze\\ Units of your choice\n"
+"  \\item A Pack of \\svg{bronze} Units of your choice\n"
+"  \\item A Few \\svg{bronze} Units of your choice\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Tlupa \\bronze\\ Jednotek dle tvého výběru\n"
-"  \\item Hrstka \\bronze\\ Jednotek dle tvého výběru\n"
+"  \\item Tlupa \\svg{bronze} Jednotek dle tvého výběru\n"
+"  \\item Hrstka \\svg{bronze} Jednotek dle tvého výběru\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -178,23 +178,23 @@ msgstr ""
 "\n"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{1-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCÉNÁŘ PRO 1 HRÁČE}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{2-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCÉNÁŘ PRO 2 HRÁČE}}"
 
 #.  \linebreak
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{3-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCÉNÁŘ PRO 3 HRÁČE}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{4-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{SCÉNÁŘ PRO 4 HRÁČE}}"
 
@@ -281,10 +281,10 @@ msgstr ""
 #: clash/the_fractured_kingdoms.tex:26
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
+"\\textbf{Town Buildings:} \\svg{bronze} Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Městské Budovy:} \\bronze\\ Obydlí\n"
+"\\textbf{Městské Budovy:} \\svg{bronze} Obydlí\n"
 "\n"
 
 #. type: multicols
@@ -365,10 +365,10 @@ msgstr ""
 #: coops/emerald_island.tex:65
 #, no-wrap
 msgid ""
-"    \\item You can't build a \\golden\\ Dwelling.\n"
+"    \\item You can't build a \\svg{golden} Dwelling.\n"
 "\n"
 msgstr ""
-"    \\item Nemůžete postavit \\golden\\ Obydlí.\n"
+"    \\item Nemůžete postavit \\svg{golden} Obydlí.\n"
 "\n"
 
 #. type: multicols
@@ -415,10 +415,10 @@ msgstr ""
 #: coops/emerald_island.tex:78
 #, no-wrap
 msgid ""
-"    \\item For the last Mine/Settlement battle, add a \\golden\\ Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
+"    \\item For the last Mine/Settlement battle, add a \\svg{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
 "\n"
 msgstr ""
-"    \\item Pro poslední Souboj o Důl/Osadu přidejte \\golden\\ Neutrální Jednotku. Pro tento Souboj máte neomezený počet Tahů. K přeskočení tohoto Souboje nemůžete použít Pokročilou Diplomacii!\n"
+"    \\item Pro poslední Souboj o Důl/Osadu přidejte \\svg{golden} Neutrální Jednotku. Pro tento Souboj máte neomezený počet Tahů. K přeskočení tohoto Souboje nemůžete použít Pokročilou Diplomacii!\n"
 "\n"
 
 #. type: multicols
