--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-03-29 17:21+0000\n"
 "Last-Translator: Vojtěch Růžička <kelghor@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -127,7 +127,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -143,7 +143,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:308
+#: sections/random_scenario.tex:298
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -335,10 +335,10 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:38
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\bronze\\ Dwelling, \\silver\\ Dwelling\n"
+"\\textbf{Town Buildings:} \\svg{bronze} Dwelling, \\svg{silver} Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Městské Budovy:} \\bronze\\ Obydlí, \\silver\\ Obydlí\n"
+"\\textbf{Městské Budovy:} \\svg{bronze} Obydlí, \\svg{silver} Obydlí\n"
 "\n"
 
 #. type: multicols*
@@ -380,7 +380,7 @@ msgid ""
 "    \\end{itemize}\n"
 "    \\item \\textbf{AI Deck:}\n"
 "    \\begin{itemize}\n"
-"        \\item 5 × Might \\svg{might} Card\n"
+"        \\item 5 × Might \\svg[12]{might} Card\n"
 "        \\item 1 × Magic \\svg{magic} Card\n"
 "        \\item 3 × Skill \\svg{skill} Card\n"
 "    \\end{itemize}\n"
@@ -408,7 +408,7 @@ msgstr ""
 "    \\end{itemize}\n"
 "    \\item \\textbf{AI Balíček:}\n"
 "    \\begin{itemize}\n"
-"        \\item 5 × Karta Moci \\svg{might}\n"
+"        \\item 5 × Karta Moci \\svg[12]{might}\n"
 "        \\item 1 × Karta Magie \\svg{magic}\n"
 "        \\item 3 × Karta Schopnost \\svg{skill}\n"
 "    \\end{itemize}\n"
@@ -433,7 +433,7 @@ msgid ""
 "       Neutral Army one Level higher than your Hero Level (Max Level VI)\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
 "    \\item \\textbf{AI Deck:}\n"
 "    \\begin{itemize}\n"
-"        \\item 2 × \\svg{might} Might Card\n"
+"        \\item 2 × \\svg[12]{might} Might Card\n"
 "        \\item 2 × \\svg{magic} Magic Card\n"
 "    \\end{itemize}\n"
 "    \\item \\textbf{Spells:}\n"
@@ -449,7 +449,7 @@ msgstr ""
 "      \\item Neutrální Armáda o Úroveň vyšší než váš Hrdina\\footnote{Viz ``Tabulka Obtížností'' na straně 35 Knihy Základních Pravidel.}\n"
 "    \\item \\textbf{AI Deck:}\n"
 "    \\begin{itemize}\n"
-"        \\item 2 × Karta Moci \\svg{might}\n"
+"        \\item 2 × Karta Moci \\svg[12]{might}\n"
 "        \\item 2 × Karta Magie \\svg{magic}\n"
 "    \\end{itemize}\n"
 "    \\item \\textbf{Kouzla:}\n"
@@ -492,7 +492,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:110
 #, no-wrap
 msgid ""
-"\\textbf{3 × Far (II--III) Map Tile}\n"
+"\\textbf{6 × Far (II--III) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Castle (F3)\n"
 "  \\item 1 × Rampart (F10)\n"
@@ -503,7 +503,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{3 × Vzdálený (II--III) Dílek Mapy}\n"
+"\\textbf{6 × Vzdálený (II--III) Dílek Mapy}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Hrad (F3)\n"
 "  \\item 1 × Bašta (F10)\n"
@@ -518,7 +518,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:117
 #, no-wrap
 msgid ""
-"\\textbf{2 × Near (IV--V) Map Tile}\n"
+"\\textbf{4 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Castle (N3, choose from: \\#N3, N6)\n"
 "  \\item 1 × Rampart (N8)\n"
@@ -526,7 +526,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{2 × Blízký (IV--V) Dílek Mapy}\n"
+"\\textbf{4 × Blízký (IV--V) Dílek Mapy}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Hrad (N3, vyberte z: \\#N3, N6)\n"
 "  \\item 1 × Bašta (N8)\n"
