--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-10-23 21:18+0000\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -44,7 +44,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -168,15 +168,15 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\bronze\\ Units with the \\textit{lowest} Recruitment cost\n"
-"  \\item A Few \\bronze\\ Units with the \\textit{highest} Recruitment cost\n"
+"  \\item A Pack of \\svg{bronze} Units with the \\textit{lowest} Recruitment cost\n"
+"  \\item A Few \\svg{bronze} Units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Tlupu \\bronze\\ Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
-"  \\item Hrstka \\bronze\\ Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Tlupu \\svg{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item Hrstka \\svg{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -184,10 +184,10 @@ msgstr ""
 #: coops/sentinels.tex:34 campaigns/castle_greek_gift.tex:35
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
+"\\textbf{Town Buildings:} \\svg{bronze} Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"\\textbf{Budovy ve Městě:} \\bronze\\ Obydlí, Citadela\n"
+"\\textbf{Budovy ve Městě:} \\svg{bronze} Obydlí, Citadela\n"
 "\n"
 
 #. type: multicols
@@ -334,7 +334,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -416,7 +416,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:306
+#: sections/random_scenario.tex:298
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -509,15 +509,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:121
-#, fuzzy, no-wrap
-#| msgid ""
-#| "  \\item Enemy armies have 3 MPs per Round.\n"
-#| "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
-#| "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
-#| "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
-#| "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "  \\item Enemy armies have 3 \\svg{movement} per Round.\n"
 "  \\item Enemy armies move at the end of every Round, starting with the Round they spawned.\n"
@@ -547,16 +539,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:131
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Fighting enemy armies over more than one Combat Round does not cost Movement Points.\n"
-#| "  \\item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.\n"
-#| "    A retreating Main Hero loses all remaining MPs and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
-#| "  \\item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.\n"
-#| "  \\item Killed enemy Units do not respawn.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Fighting enemy armies over more than one Combat Round does not cost \\svg{movement}.\n"
@@ -588,15 +571,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:140
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).\n"
-#| "  \\item At the beginning of the \\nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \\textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the Board after Reinforcing, if available).}\n"
-#| "  \\item Place the Reinforcing Units on the enemy base line, starting from the left with the lowest Initiative (\\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.\n"
-#| "  \\item When a player retreats, the enemy army draws up to the ``minimum'' of 4 Units and takes these as starting Units to the next fight.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).\n"
@@ -610,7 +585,7 @@ msgstr ""
 "  \\item V 10. Kole se objeví Armáda Bosse. Je odlišná od předchozích armád, protože je posílena z předem daného fondu Neutrálních Jednotek (Posilovací fond = číslo v závorkách v tabulce níže).\n"
 "  \\item Na začátku 2. Kola Souboje a každého následujícího Kola posilují zbývající armádu 2 Jednotky z promíchaného Posilovacího fondu (až do maxima 5 Jednotek), aby pokračovaly v Souboji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z Posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských Jednotek na začátku Kola 1 nebo nižší, doplňte až do celkového počtu 4 Jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
 "  \\item Umístěte posilující Jednotky na nepřátelskou základní linii, začněte zleva s nejnižší iniciativou (nejprve \\svg{unit_ranged} Jednotky). Pokud je to nutné, pokračujte na další řadu ve stejném pořadí.\n"
-"  \\item Když hráč ustoupí, nepřátelská armáda doplní až do \\uv{minimálního} počtu 4 Jednotek a tyto Jednotky si vezme jako výchozí do dalšího Souboje.\n"
+"  \\item Když hráč ustoupí, nepřátelská armáda doplní až do minimálního počtu 4 Jednotek a tyto Jednotky si vezme jako výchozí do dalšího Souboje.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -618,7 +593,7 @@ msgstr ""
 #: coops/sentinels.tex:142 coops/stand_united.tex:87
 #: clash/dragoncurse_castle.tex:85 campaigns/inferno_devilish_plan.tex:224
 #: campaigns/castle_greek_gift.tex:120 campaigns/castle_greek_gift.tex:271
-#: sections/credits.tex:28 sections/random_scenario.tex:304
+#: sections/credits.tex:28 sections/random_scenario.tex:296
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -632,7 +607,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
 #: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
-#: sections/credits.tex:34 sections/random_scenario.tex:314
+#: sections/credits.tex:34 sections/random_scenario.tex:306
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -654,63 +629,71 @@ msgstr ""
 "  \\node at (14, 3) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 
 #. type: Plain text
-#: coops/sentinels.tex:192
+#: coops/sentinels.tex:183
 msgid ""
 "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
-"\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
-"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
-"{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
-"\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
-"{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
-"& \\darkcell{Rounds 6 + 7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round "
-"10}\\\\ \\darkcell[1.4]{Easy} & \\lightcell[1.4]{\\bronze \\silver \\silver "
-"\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
-"\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
-"\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver \\silver \\silver "
-"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
-"\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
-"\\darkcell[1.4]{Hard} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\golden \\azure \\azure \\footref{azure} "
-"\\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]"
-"{Impossible} & \\lightcell[1.4]{\\silver \\golden \\golden \\golden "
-"\\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
-"\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
+"\\ \\bigskip \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
+"\\darkcell{Rounds 6 + 7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round 10}\\"
+"\\ \\darkcell[1.4]{Easy} & \\lightcell[1.4]{\\svg[12]{bronze}\\svg[12]"
+"{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]"
+"{silver}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak "
+"(2\\svg[12]{bronze}, 4\\svg[12]{silver}, 3\\svg[12]{golden}, 1\\svg[12]"
+"{azure})}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\svg[12]{silver}"
+"\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak "
+"(2\\svg[12]{silver}, 7\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ "
+"\\darkcell[1.4]{Hard} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}"
+"\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]"
+"{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}"
+"\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}"
+"\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]"
+"{silver}, 6\\svg[12]{golden}, 2\\svg[12]{azure})}\\\\ \\darkcell[1.4]"
+"{Impossible} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}} "
+"& \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}\\svg[12]"
+"{azure}\\footref{azure} \\linebreak (7\\svg[12]{golden}, 3\\svg[12]{azure})}"
+"\\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Síla Nepřátelské Armády}\\"
-"\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
-"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
-"{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
-"\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
-"{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
-"& \\darkcell{Kola 6 + 7} & \\darkcell{Kola 8 + 9} & \\darkcell{Kolo 10}\\\\ "
-"\\darkcell[1.4]{Lehká} & \\lightcell[1.4]{\\bronze \\silver \\silver "
-"\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
-"\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
-"\\ \\darkcell[1.4]{Normální} & \\lightcell[1.4]{\\silver \\silver \\silver "
-"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
-"\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
-"\\darkcell[1.4]{Težká} & \\lightcell[1.4]{\\silver \\silver \\golden "
-"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
-"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
-"\\darkcell[1.4]{Nemožná} & \\lightcell[1.4]{\\silver \\golden \\golden "
-"\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
-"\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
+"\\ \\bigskip  \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
+"\\darkcell{Kola 6 + 7} & \\darkcell{Kola 8 + 9} & \\darkcell{Kolo 10}\\\\ "
+"\\darkcell[1.4]{Lehká} & \\lightcell[1.4]{\\svg[12]{bronze}\\svg[12]{silver}"
+"\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}} & \\lightcell[1.4]"
+"{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}"
+"\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}"
+"\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]"
+"{bronze}, 4\\svg[12]{silver}, 3\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ "
+"\\darkcell[1.4]{Normální} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]"
+"{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak "
+"(2\\svg[12]{silver}, 7\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ "
+"\\darkcell[1.4]{Težká} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}"
+"\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]"
+"{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}"
+"\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}"
+"\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]"
+"{silver}, 6\\svg[12]{golden}, 2\\svg[12]{azure})}\\\\ \\darkcell[1.4]"
+"{Nemožná} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}} "
+"& \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}\\svg[12]"
+"{azure}\\footref{azure} \\linebreak (7\\svg[12]{golden}, 3\\svg[12]{azure})}"
+"\\\\ \\end{tabularx} }"
 
 #. type: Plain text
-#: coops/sentinels.tex:196
+#: coops/sentinels.tex:187
 msgid "\\stepcounter{footnote}"
 msgstr "\\stepcounter{footnote}"
 
 #. type: footnotetext{#2}
-#: coops/sentinels.tex:196
+#: coops/sentinels.tex:187
 msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
