--- a/translations/trial_by_combat.tex/cs.po
+++ b/translations/trial_by_combat.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-07-02 10:48+0200\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-06-22 00:57+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -32,7 +32,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -80,13 +80,13 @@ msgstr "\\addscenariosection{1}{Střet}{Lov}{\\images/slayer.png}"
 #: clash/trial_by_combat.tex:7
 #, fuzzy, no-wrap
 #| msgid ""
-#| "\\textbf{Author:} mopo\n"
+#| "\\textbf{Author:} Shakajiub\n"
 #| "\n"
 msgid ""
-"\\textbf{Author:} LAAMAKALA\n"
+"\\textbf{Author:} Laamakala\n"
 "\n"
 msgstr ""
-"\\textbf{Autor:} mopo\n"
+"\\textbf{Autor:} Shakajiub\n"
 "\n"
 
 #. type: multicols*
@@ -135,22 +135,22 @@ msgstr ""
 #| msgid ""
 #| "\\textbf{Starting Units:}\n"
 #| "\\begin{itemize}\n"
-#| "  \\item  1 × A Few cheapest \\bronze\\ Units\n"
-#| "  \\item  1 × A Few cheapest \\silver\\ Units\n"
+#| "  \\item  1 × A Few cheapest \\svg{bronze} Units\n"
+#| "  \\item  1 × A Few cheapest \\svg{silver} Units\n"
 #| "\\end{itemize}\n"
 #| "\n"
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Few cheapest \\silver\\ Units\n"
-"  \\item A chosen Neutral \\bronze\\ Unit matching the player's Faction\n"
+"  \\item A Few cheapest \\svg{silver} Units\n"
+"  \\item A chosen Neutral \\svg{bronze} Unit matching the player's Faction\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Hrstku nejlevnějších \\bronze\\ Jednotek\n"
-"  \\item 1 × Hrstku nejlevnějších \\silver\\ Jednotek\n"
+"  \\item 1 × Hrstku nejlevnějších \\svg{bronze} Jednotek\n"
+"  \\item 1 × Hrstku nejlevnějších \\svg{silver} Jednotek\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -158,13 +158,13 @@ msgstr ""
 #: clash/trial_by_combat.tex:27
 #, fuzzy, no-wrap
 #| msgid ""
-#| "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
+#| "\\textbf{Town Buildings:} \\svg{bronze} Dwelling, Citadel\n"
 #| "\n"
 msgid ""
-"\\textbf{Town Buildings:} \\bronze\\ Dwelling, Mage Guild\n"
+"\\textbf{Town Buildings:} \\svg{bronze} Dwelling, Mage Guild\n"
 "\n"
 msgstr ""
-"\\textbf{Budovy ve Městě:} \\bronze\\ Obydlí, Citadela\n"
+"\\textbf{Budovy ve Městě:} \\svg{bronze} Obydlí, Citadela\n"
 "\n"
 
 #. type: multicols*
@@ -312,7 +312,7 @@ msgid ""
 "  \\darkcell[1.4]{-1/0}\n"
 "    & \\lightcell[1.4]{Raining Ash – All \\svg{unit_flying-yellow} Units gain -2 \\svg{initiative-yellow}.}\\\\\n"
 "  \\darkcell[1.4]{-1/+1}\n"
-"    & \\lightcell[1.4]{Scorching Earth – All \\silver\\ and \\golden\\ Units start Combat with 1 \\svg{damage-yellow}.}\\\\\n"
+"    & \\lightcell[1.4]{Scorching Earth – All \\svg{silver} and \\svg{golden} Units start Combat with 1 \\svg{damage-yellow}.}\\\\\n"
 "  \\darkcell[1.4]{0/-1}\n"
 "    & \\lightcell[1.4]{Sinking Mud – All \\svg{unit_ground-yellow} Units move one space less.}\\\\\n"
 "  \\darkcell[1.0]{0/0}\n"
@@ -335,8 +335,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item After winning a Neutral Combat, you may sacrifice 2 \\bronze\\ Units to gain 1 \\silver\\ Unit you defeated.\n"
-"  \\item When a Main Hero is defeated, at the start of that player's next turn, they may Empower any Statistic Card from their M\\&M Deck, and Search (2) the \\silver\\ Neutral Deck.\n"
+"  \\item After winning a Neutral Combat, you may sacrifice 2 \\svg{bronze} Units to gain 1 \\svg{silver} Unit you defeated.\n"
+"  \\item When a Main Hero is defeated, at the start of that player's next turn, they may Empower any Statistic Card from their M\\&M Deck, and Search (2) the \\svg{silver} Neutral Deck.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
