--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Dragnarøk}{\images/dragnarok.png}
+\addscenariosection{1}{Clash Scenario}{Dragnarøk}{\images/blind.png}
 
 \begin{multicols}{2}
 
