--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -85,7 +85,7 @@ In case of a tie, the tied players draw Cards to their \svg{hand} Limit and enga
   \columnbreak
   \item \textbf{Dragon Utopia:} Draw Cards up to \svg{hand} Limit, gain 10 \svg{gold}, 1 \svg{valuables} and Search (2) \svg{artifact} twice.
   \item \textbf{Obelisk:} Roll 1 \svg{resource} or \svg{treasure}.
-  \item When Tiles are removed, reduce any production provided by mines or settlements on that Tile.
+  \item When Tiles are removed, reduce any income provided by mines or settlements on that Tile.
   \item Remove ``Astrologers proclaim week of the Magic Tortoise'' from the Astrologers Proclaim Deck.
 \end{itemize}
 \end{multicols}
