Reword victory conditions with enemy heroes

--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -45,7 +45,7 @@ The game ends when any of the following conditions are met:
 
 \begin{itemize}
   \item One player has flagged all 6 Obelisks. \textit{That player wins the game immediately.}
-  \item \textbf{4 -- 6 players:} One player has defeated each of the other players' Main Heroes once. \textit{That player wins the game immediately.}
+  \item \textbf{4 -- 6 players:} One player has defeated every opponent's Main Hero at least once. \textit{That player wins the game immediately.}
   \item At the end of Round 15.
 \end{itemize}
 
