--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -42,7 +42,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 The game ends at the end of a Round when either of these conditions is met:
 \begin{itemize}
   \item Both Dragon Utopias have been flagged.
-  \item One player has defeated each other player's Main Hero at least once.
+  \item One player has defeated every opponent's Main Hero at least once.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
