--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -39,7 +39,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \subsection*{\MakeUppercase{Victory Conditions}}
 The game ends when any of the following conditions are met:
 \begin{itemize}
-  \item One player has defeated each other player's Main Hero once. \textit{That player wins the game immediately.}
+  \item One player has defeated every opponent's Main Hero at least once. \textit{That player wins the game immediately.}
   \item At the end of Round 14.
 \end{itemize}
 
