Fix listdot size

--- a/metadata.tex
+++ b/metadata.tex
@@ -164,11 +164,7 @@
   }%
 }
 
-\renewcommand{\labelitemi}{
-  \begin{tikzpicture}
-    \node (listdot) [circle, inner sep=-3] {\includegraphics[width=1em, valign=c]{\layout/listdot.png}};
-  \end{tikzpicture}
-}
+\renewcommand{\labelitemi}{\includegraphics[width=0.7em, valign=c]{\layout/listdot.png}}
 
 % Colors
 \definecolor{amber}{rgb}{1.0, 0.49, 0.0}
