Missing newpage to fix overlab with previous scenario

--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -1,3 +1,4 @@
+\newpage
 % !TeX spellcheck = en_US
 \addscenariosection{1}{Cooperative Scenario}{The Ambushed Accord}{\images/the_ambushed_accord_banner.png}
 
