Capitalization and White space totalitarianism accomplished?

--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -1,4 +1,3 @@
-\newpage
 % !TeX spellcheck = en_US
 \addscenariosection{1}{Cooperative Scenario}{The Ambushed Accord}{\images/the_ambushed_accord_banner.png}
 
@@ -7,7 +6,7 @@
 \textbf{Author:} Wololoeren
 
 \textit{The war had dragged on far too long. Armies were shattered, lands burned, and hope had thinned to a whisper. At last, the rival lords agreed to set aside their grievances and forge an Accord — a fragile peace born of desperation.\\
-	Messengers rode beneath white banners, oaths were sworn, and for the first time in years, the clash of steel gave way to uneasy silence. Yet peace has its own enemies.\\	
+	Messengers rode beneath white banners, oaths were sworn, and for the first time in years, the clash of steel gave way to uneasy silence. Yet peace has its own enemies.\\
 	As the allied hosts gathered in the valley of Laren’s Cross, dawn broke with the sound of horns — not of welcome, but of war.\\
 	Out of the mist, unseen armies struck with deadly precision. Someone had betrayed the Accord.\\
 	Now, surrounded and outnumbered, the fate of your alliance lies in your hands. Stand together… or fall alone.}  % no-check-caps
@@ -24,7 +23,7 @@
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Search (2) the \svg{bronze} Neutral deck.
+  \item 2 × Search (2) the \svg{bronze} Neutral Deck.
 \end{itemize}
 
 \textbf{Town Buildings:} City-Hall.
@@ -45,38 +44,38 @@ All players must defeat the Level VII Neutral Combat.
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
 \begin{itemize}
-	\item Build either Camp (\svg{building_special_tent}) or Workshop (Gears) for free.
+  \item Build either Camp (\svg{building_special_tent}) or Workshop (Gears) for free.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item At the end of round 4 \textbf{*One*} player must fight a Timed Event Fight (TEF) of 5x\svg{bronze}.
+  \item At the end of Round 4 \textbf{*One*} player must fight a Timed Event Fight (TEF) of 5x\svg{bronze}.
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
-  \item At the end of round 8 \textbf{*One*} player must fight a TEF of 4x\svg{silver} 
+  \item  At the end of Round 8 \textbf{*One*} player must fight a TEF of 4x\svg{silver}
 \end{itemize}
 \textbf{\nth{10} Round:}
 \begin{itemize}
-	\item At the end of round 10 \textbf{*One*} player must fight a TEF of 3x\svg{golden}.
+  \item  At the end of Round 10 \textbf{*One*} player must fight a TEF of 3x\svg{golden}.
 \end{itemize}
 \textbf{\nth{12} Round:}
 \begin{itemize}
-	\item At the end of round 12 \textbf{*One*} player must fight a TEF of 2x\svg{azure}.
+  \item  At the end of Round 12 \textbf{*One*} player must fight a TEF of 2x\svg{azure}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \subsubsection*{\MakeUppercase{Difficulty Settings}}
 \textbf{Easy:}
 \begin{itemize}
-  \item Remove a unit from each Timed Event Fight.
+  \item Remove a Unit from each Timed Event Fight.
 \end{itemize}
 \textbf{Hard:}
 \begin{itemize}
-  \item Add a initiative stack token to a random unit of the TEFs on round 4, 8 and 10.
+  \item Add a initiative stack token to a random Unit of the TEFs on round 4, 8 and 10.
 \end{itemize}
 \textbf{Impossible:}
 \begin{itemize}
-  \item Add two random stack token to two units of all TEF fights.
+  \item Add two random stack token to two Units of all TEF fights.
 \end{itemize}
 %\columnbreak
 
@@ -85,17 +84,16 @@ All players must defeat the Level VII Neutral Combat.
   \item Collaboratively pay P×5 \svg{gold}, P×3 \svg{building_materials} and P×1 \svg{valuables} to reveal the Center Map Tile(P is number of players). e.g.: 4 Players must pay 20\svg{gold}, 12\svg{building_materials}, 4\svg{valuables}.
   \item For less than 4 players only \textbf{*One*} player need to fight the TEF. The players may decide which eligible players will fight.
   \item For 4 or more players \textbf{*Two*} players must fight a TEF each when the event occur.
-  \item Players are NOT eligible to fight a TEF if they already \textbf{won} more TEF than another player or have no units.
-  \item Defeating a TEF grants a permanent +1 \svg{movement} to your main hero.
-  \item If a player is defeated in a TEF their hero is sent back to their town with no units, the remaining TEF units must be defeated by another player if no player is eligible to fight they all loose the scenario.
+  \item Players are NOT eligible to fight a TEF if they already \textbf{won} more TEF than another player or have no Units.
+  \item Defeating a TEF grants a permanent +1 \svg{movement} to your main Hero.
+  \item If a player is defeated in a TEF their Hero is sent back to their town with no Units, the remaining TEF Units must be defeated by another player if no player is eligible to fight they all loose the Scenario.
 \end{itemize}
-
 
 \subsubsection*{\MakeUppercase{Other Rules}}
 \begin{itemize}
-	\item At the end of every round players must decide one player who get a free Positive morale token.
-	\item Players may exchange artifacts and spells from their hands and units and resources if their main heroes are standing on adjacent fields or both are standing in their own town.
-	\item Once a player defeats the level 7 center-tile field their Heroes are removed from the board and they cannot fight TEF, and are no longer being considered for TEF eligibility.
+  \item  At the end of every round players must decide one player who get a free Positive morale token.
+  \item  Players may exchange artifacts and spells from their hands and Units and resources if their main Heroes are standing on adjacent Fields or both are standing in their own town.
+  \item  Once a player defeats the level 7 center-tile Field their Heroes are removed from the board and they cannot fight TEF, and are no longer being considered for TEF eligibility.
 \end{itemize}
 \end{multicols}
 \begin{tikzpicture}[overlay]
